--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
 # Site settings
-title: Angel Solutions: Labs
+title: Angel Solutions Labs
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/labs/" # the subpath of your site, e.g. /blog/
+baseurl: "http://lpl-ad-dwilliams/design/labs" # the base hostname & protocol for your site
+destination: "C:/inetpub/wwwroot/design/labs"
 url: "http://angelsolutions.github.io/" # the base hostname & protocol for your site
 
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
