--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,21 @@
 # Site settings
-title: Angel Solutions Labs
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "http://lpl-ad-dwilliams/design/labs" # the base hostname & protocol for your site
-destination: "C:/inetpub/wwwroot/design/labs"
-url: "http://angelsolutions.github.io/" # the base hostname & protocol for your site
+title:            Angel Solutions Labs
+description:      Education, technology and business
+#logo:             site-logo.png
+
+# Assign a default image for your site's header and footer
+default_bg:       angelcover.jpg
+search:           true
+share:            true
+# Read Time is a calculator tp provide post read-time based on word count. Usage is recommended.
+readtime:         false
+# Turn on or off the fin animations in the header and footer
+animated_fins:    true
+# Specify the fin color in RGB value
+fin_color:        "255,255,255"
+# Change url to your domain. Leave localhost server or blank when working locally.
+url:              "http://angelsolutions.github.io/"
+#destination: "C:/inetpub/wwwroot/design/labs"
 
 
 # Build settings
