--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:      Education, technology and business
 #logo:             site-logo.png
 
 # Assign a default image for your site's header and footer
-default_bg:       angelcover.jpg
+default_bg:       images/angelcover.jpg
 search:           true
 share:            true
 # Read Time is a calculator tp provide post read-time based on word count. Usage is recommended.
@@ -15,7 +15,7 @@ animated_fins:    true
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
 url:              "http://angelsolutions.github.io/labs"
-#destination: "C:/inetpub/wwwroot/design/labs"
+destination: "C:/inetpub/wwwroot/design/labs"
 
 
 # Build settings
