--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:            Angel Solutions Labs
-description:      the Big Data Blog From Angel Solutions
+description:      The Big Data Blog From Angel Solutions
 logo:             logo.png
 
 # Assign a default image for your site's header and footer
