--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:            Angel Solutions Labs
-description:      The Big Data Blog From Angel Solutions
+title:            "Angel Solutions: Labs"
+description:      A Blog about Education, Big Data and more...
 logo:             logo.png
 
 # Assign a default image for your site's header and footer
@@ -14,8 +14,8 @@ animated_fins:    true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              "http://angelsolutions.github.io/labs"
-#url:     "http://lpl-ad-dwilliams/design/labs"
+#url:              "http://angelsolutions.github.io/labs"
+url:     "http://lpl-ad-dwilliams/design/labs"
 #baseurl: "http://lpl-ad-dwilliams/design/labs"
 destination: "C:/inetpub/wwwroot/design/labs"
 
